# video-downloador

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/yt_dlp_download/: __init__.py  task.oo.yaml
tasks/yt_dlp_download/config/: __init__.py  ydl_config.py
tasks/yt_dlp_download/formatters/: __init__.py  format_selector.py  quality_analyzer.py
tasks/yt_dlp_download/handlers/: __init__.py  info_handler.py  progress_handler.py
tasks/yt_dlp_download/utils/: __init__.py  file_utils.py  format_utils.py
