[project]
name = "video-downloador"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysmavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "yt-dlp (>=2025.9.23,<2026.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "video_downloador", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
